# evaluation-juin-2024-1

./: .gitignore  Cargo.toml  README.md  Timesheet-evaluation.xlsx  package.json  pnpm-lock.yaml  skeletionFrame.excalidraw  svelte.config.js  tailwind.config.js  vite.config.ts
app/codegen/: admin.ts  equipe.ts  global.ts
app/lib/: ROUTES.ts  index.ts
app/routes/: +layout.svelte
app/schemas/: admin.graphqls  equipe.graphqls  global.graphqls
data/: YYY données importations 5 juin 2024 - etape.csv  YYY données importations 5 juin 2024 - points.csv  YYY données importations 5 juin 2024 - resultat.csv  données importation juin 2024 - etape.csv  données importation juin 2024 - points.csv  données importation juin 2024 - resultat.csv  données importation juin 2024.xlsx
looping/: MCD.lo1  MCD.loo
migrations/: j1_data.sql  j1_up.sql  j2_data.sql  j2_up.sql
migrations/2024-06-01-170651_reset/: down.sql  up.sql
migrations/2024-06-01-171313_create_categorie/: down.sql  up.sql
migrations/2024-06-01-171706_create_coureur/: down.sql  up.sql
migrations/2024-06-01-171949_create_equipe/: down.sql  up.sql
migrations/2024-06-01-172236_create_coureur_categorie/: down.sql  up.sql
migrations/2024-06-01-172752_create_equipe_coureur/: down.sql  up.sql
migrations/2024-06-01-173215_create_etape/: down.sql  up.sql
migrations/2024-06-01-174208_create_temps_coureur/: down.sql  up.sql
migrations/2024-06-01-223322_create_points/: down.sql  up.sql
src/: error.rs  graphql.rs  lib.rs  main.rs  models.rs  modules.rs  reset.rs  schema.rs  view.rs
src/graphql/: admin.rs  (+2 more)
(+156 files in other folders)
